# clippr

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
cask/: clippr.rb
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs  main.rs  tray.rs
src/lib/: ipc.ts
src/lib/components/: CategoryModal.svelte  ClipItem.svelte  ClipList.svelte  SearchBar.svelte  Sidebar.svelte
src/lib/stores/: categories.ts  clips.ts
